--- a/package.json
+++ b/package.json
@@ -4,5 +4,24 @@
   "main": "index.js",
   "repository": "https://github.com/thomalexg/Zero-Dependency-Node.js-Web-Server",
   "author": "thomalex <thomas.gae@posteo.de>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "4.0.0",
+    "@typescript-eslint/parser": "4.0.0",
+    "@upleveled/eslint-config-upleveled": "1.5.1",
+    "babel-eslint": "10.0.0",
+    "eslint": "7.5.0",
+    "eslint-config-react-app": "6.0.0",
+    "eslint-import-resolver-typescript": "2.3.0",
+    "eslint-plugin-cypress": "2.11.2",
+    "eslint-plugin-flowtype": "5.2.0",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-jest": "24.0.0",
+    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-react": "7.20.3",
+    "eslint-plugin-react-hooks": "4.0.8",
+    "eslint-plugin-testing-library": "3.9.0",
+    "eslint-plugin-unicorn": "26.0.1",
+    "typescript": "4.1.3"
+  }
 }
